# webos-shutdownscripts

./: .gitignore  CMakeLists.txt  README.md
files/conf/: shutdown-watchdog  watchdog
files/launch/: runlevel-H-handler.in  runlevel-U-handler.in
scripts/public/: kill_watchdog.sh.in  orderly-shutdown  shutdown-animation.in  shutdown-cancel-watchdog.sh.in  shutdown-watchdog.sh.in  shutdown_animation.in  stop-comms.in  stop-fbprogress.in  stop_comms.in  stop_fbprogress.in  watchdog.sh.in
scripts/public/sbin/: kill_watchdog.sh
